minor fix deploy

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -37,8 +37,7 @@
 
     - name: Config git user
       shell: git config --global color.ui true && git config --global user.email "{{ item }}@{{ ansible_fqdn }}" && git config --global user.name "{{ item }}"
-      with_items: users.stdout_lines
-      become_user: "{{ item }}"
+      with_items: "{{ users.stdout_lines }}"
 
     - name: Add Vagrant plugins
       shell: vagrant plugin install vagrant-mutate vagrant-libvirt vagrant-vbguest vagrant-puppet-install vocker  vagrant-lxc vagrant-list vagrant-hosts vagrant-hostmanager vagrant-exec vagrant-camera vagrant-cachier sahara vagrant-scp
