add ibmcloud package

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -26,6 +26,7 @@
     - kompose-converter
     - andrewrothstein.terraform
     #- wtanaka.gcloud_sdk
+    - ibmcloud
 
   tasks:
     - name : list users to apply oh-my-zsh
