--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -59,3 +59,6 @@
 
 - name: andrewrothstein.terraform
   src: andrewrothstein.terraform
+
+- name: andrelohmann.azurecli
+  src: andrelohmann.azurecli
