--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,57 +2,52 @@
 
 - name: common-desktop
   src: https://github.com/hackwish/ansible-common-desktop.git
-
-- name: docker
-  src: https://github.com/hackwish/ansible-docker.git
-
-- name: rke
-  src: https://github.com/hackwish/ansible-rke.git
-
-- name: kompose-converter
-  src: https://github.com/hackwish/ansible-kompose-converter.git
-
-- name: rancher2-cli
-  src: https://github.com/hackwish/ansible-rancher2-cli.git
+  version: ubuntu-2004
 
 - name: ohmyzsh
   src: https://github.com/hackwish/ansible-ohmyzsh.git
 
-- name: capistrano
-  src: https://github.com/hackwish/ansible-capistrano.git
-
 - name: cloudalchemy.node-exporter
   src: cloudalchemy.node-exporter
 
-- name: andrewrothstein.kubernetes-helm
-  src: andrewrothstein.kubernetes-helm
+# - name: docker
+#   src: https://github.com/hackwish/ansible-docker.git
 
-- name: andrewrothstein.kubectl
-  src: andrewrothstein.kubectl
+# - name: rke
+#   src: https://github.com/hackwish/ansible-rke.git
 
-- name: wtanaka.gcloud_sdk
-  src: wtanaka.gcloud_sdk
+# - name: kompose-converter
+#   src: https://github.com/hackwish/ansible-kompose-converter.git
 
-- name: suzuki-shunsuke.git-lfs-ubuntu
-  src: suzuki-shunsuke.git-lfs-ubuntu
+# - name: rancher2-cli
+#   src: https://github.com/hackwish/ansible-rancher2-cli.git
 
-- name: gantsign.minikube
-  src: gantsign.minikube
+# - name: capistrano
+#   src: https://github.com/hackwish/ansible-capistrano.git
 
-- name: gnagano.ansible_gitflow
-  src: gnagano.ansible_gitflow
+# - name: ibmcloud
+#   src: https://github.com/hackwish/ansible-ibmcloud.git
+  
+# - name: azurecli
+#   src: https://github.com/hackwish/ansible-role-azurecli.git
 
-- name: ngetchell.vscode
-  src: ngetchell.vscode
+# - name: andrewrothstein.kubernetes-helm
+#   src: andrewrothstein.kubernetes-helm
 
-- name: rgibert.valve_steam
-  src: rgibert.valve_steam
+# - name: andrewrothstein.kubectl
+#   src: andrewrothstein.kubectl
 
-- name: geerlingguy.packer
-  src: geerlingguy.packer
+# - name: gantsign.minikube
+#   src: gantsign.minikube
 
-- name: andrewrothstein.vagrant
-  src: andrewrothstein.vagrant
+# - name: rgibert.valve_steam
+#   src: rgibert.valve_steam
 
-- name: andrewrothstein.terraform
-  src: andrewrothstein.terraform
+# - name: geerlingguy.packer
+#   src: geerlingguy.packer
+
+# - name: andrewrothstein.vagrant
+#   src: andrewrothstein.vagrant
+
+# - name: andrewrothstein.terraform
+#   src: andrewrothstein.terraform
