--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -10,6 +10,9 @@
 - name: cloudalchemy.node-exporter
   src: cloudalchemy.node-exporter
 
+- name: bihealth.python3
+  src: bihealth.python3
+
 # - name: docker
 #   src: https://github.com/hackwish/ansible-docker.git
 
