--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -10,6 +10,7 @@
     - common-desktop
     - ohmyzsh
     - cloudalchemy.node-exporter
+    - bihealth.python3
     # - geerlingguy.packer
     # - andrewrothstein.vagrant
     # - gantsign.minikube
