--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,39 +2,49 @@
 
 - name: common-desktop
   src: https://github.com/hackwish/ansible-common-desktop.git
-
-- name: docker
-  src: https://github.com/hackwish/ansible-docker.git
-
-- name: rke
-  src: https://github.com/hackwish/ansible-rke.git
-
-- name: kompose-converter
-  src: https://github.com/hackwish/ansible-kompose-converter.git
-
-- name: rancher2-cli
-  src: https://github.com/hackwish/ansible-rancher2-cli.git
+  # version: ubuntu-2004
 
 - name: ohmyzsh
   src: https://github.com/hackwish/ansible-ohmyzsh.git
 
-- name: capistrano
-  src: https://github.com/hackwish/ansible-capistrano.git
-
-- name: ibmcloud
-  src: https://github.com/hackwish/ansible-ibmcloud.git
-  
-- name: azurecli
-  src: https://github.com/hackwish/ansible-role-azurecli.git
-
 - name: cloudalchemy.node-exporter
   src: cloudalchemy.node-exporter
 
-- name: andrewrothstein.kubernetes-helm
-  src: andrewrothstein.kubernetes-helm
+- name: bihealth.python3
+  src: bihealth.python3
 
-- name: andrewrothstein.kubectl
-  src: andrewrothstein.kubectl
+# - name: docker
+#   src: https://github.com/hackwish/ansible-docker.git
+
+# - name: rke
+#   src: https://github.com/hackwish/ansible-rke.git
+
+# - name: kompose-converter
+#   src: https://github.com/hackwish/ansible-kompose-converter.git
+
+# - name: rancher2-cli
+#   src: https://github.com/hackwish/ansible-rancher2-cli.git
+
+# - name: ohmyzsh
+#   src: https://github.com/hackwish/ansible-ohmyzsh.git
+
+# - name: capistrano
+#   src: https://github.com/hackwish/ansible-capistrano.git
+
+# - name: ibmcloud
+#   src: https://github.com/hackwish/ansible-ibmcloud.git
+  
+# - name: azurecli
+#   src: https://github.com/hackwish/ansible-role-azurecli.git
+
+# - name: cloudalchemy.node-exporter
+#   src: cloudalchemy.node-exporter
+
+# - name: andrewrothstein.kubernetes-helm
+#   src: andrewrothstein.kubernetes-helm
+
+# - name: andrewrothstein.kubectl
+#   src: andrewrothstein.kubectl
 
 # - name: wtanaka.gcloud_sdk
 #   src: wtanaka.gcloud_sdk
@@ -42,8 +52,8 @@
 # - name: suzuki-shunsuke.git-lfs-ubuntu
 #   src: suzuki-shunsuke.git-lfs-ubuntu
 
-- name: gantsign.minikube
-  src: gantsign.minikube
+# - name: gantsign.minikube
+#   src: gantsign.minikube
 
 # - name: gnagano.ansible_gitflow
 #   src: gnagano.ansible_gitflow
@@ -51,17 +61,17 @@
 # - name: ngetchell.vscode
 #   src: ngetchell.vscode
 
-- name: rgibert.valve_steam
-  src: rgibert.valve_steam
+# - name: rgibert.valve_steam
+#   src: rgibert.valve_steam
 
-- name: geerlingguy.packer
-  src: geerlingguy.packer
+# - name: geerlingguy.packer
+#   src: geerlingguy.packer
 
-- name: andrewrothstein.vagrant
-  src: andrewrothstein.vagrant
+# - name: andrewrothstein.vagrant
+#   src: andrewrothstein.vagrant
 
-- name: andrewrothstein.terraform
-  src: andrewrothstein.terraform
+# - name: andrewrothstein.terraform
+#   src: andrewrothstein.terraform
 
 # - name: andrelohmann.azurecli
 #   src: andrelohmann.azurecli
