fix user permission fir Docker

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -40,7 +40,7 @@
 
   tasks:
     - name : list users to apply oh-my-zsh
-      shell: "getent passwd | awk -F: '$3 > 999 {print $1}'"
+      shell: "getent passwd {1000..60000} | awk -F: '$3 {print $1}'"
       register: users
 
     - name: Reload Font cache
@@ -52,3 +52,6 @@
 
     - name: Add Vagrant plugins
       shell: vagrant plugin install vagrant-mutate vagrant-libvirt vagrant-vbguest vagrant-puppet-install vocker  vagrant-lxc vagrant-list vagrant-hosts vagrant-hostmanager vagrant-exec vagrant-camera vagrant-cachier sahara vagrant-scp
+
+    - name: Fix Docker execution without sudo #Issue #7
+      shell: "users=$( getent passwd {1000..60000} | awk -F: '$3 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; done"
