--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -10,6 +10,7 @@
     nvm_install_script_version: "0.33.11"
     nvm_node_version: "4.1.1"
     nvm_install_globally: ['peerflix']
+    terraform_ver: "0.12.20"
 
   roles:
     - common-desktop
@@ -21,6 +22,7 @@
     - cloud-sql-proxy
     - plank
     # - grzegorznowak.nvm_node
+    - andrewrothstein.terraform
     #- suzuki-shunsuke.git-lfs-ubuntu
     #- gnagano.ansible_gitflow
     # - ngetchell.vscode
@@ -34,7 +36,6 @@
     # - andrewrothstein.kubernetes-helm
     # - rancher2-cli
     # - kompose-converter
-    # - andrewrothstein.terraform
     # #- wtanaka.gcloud_sdk
     # - ibmcloud
     # - azurecli
