--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -23,6 +23,7 @@
     - plank
     - brew
     - tfswitch
+    - terragrunt
     #####################
     # - grzegorznowak.nvm_node
     #- andrewrothstein.terraform
