add python 3 role. Add community Ansible collections. Fix Docker permission scripts

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -13,10 +13,10 @@
     # terraform_ver: "0.12.20"
 
   roles:
+    - bihealth.python3
     - common-desktop
     - ohmyzsh
     - cloudalchemy.node-exporter
-    # - bihealth.python3
     - andrewrothstein.vagrant
     - azure-data-studio
     - cloud-sql-proxy
@@ -47,7 +47,7 @@
 
   tasks:
     - name : list users to apply oh-my-zsh
-      shell: "getent passwd {1000..1010} | awk -F: '$3 {print $1}'"
+      shell: "getent passwd | awk -F: '$3 > 999 {print $1}'"
       register: users
 
     - name: Reload Font cache
@@ -58,4 +58,4 @@
       with_items: "{{ users.stdout_lines }}"
 
     - name: Fix Docker execution without sudo #Issue #7
-      shell: "users=$( getent passwd {1000..1010} | awk -F: '$3 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; done"
+      shell: "users=$( getent passwd | awk -F: '$3 > 999 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; done"
