--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -13,8 +13,8 @@
 - name: cloudalchemy.node-exporter
   src: cloudalchemy.node-exporter
 
-# - name: bihealth.python3
-#   src: bihealth.python3
+- name: bihealth.python3
+  src: bihealth.python3
 
 - name: andrewrothstein.vagrant
   src: andrewrothstein.vagrant
