--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -16,7 +16,7 @@
     - bihealth.python3
     - common-desktop
     - ohmyzsh
-    - cloudalchemy.node-exporter
+    - netdata
     - andrewrothstein.vagrant
     - azure-data-studio
     - cloud-sql-proxy
