--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -10,8 +10,8 @@
 - name: brew
   src: https://github.com/hackwish/ansible-brew.git
 
-#- name: cloudalchemy.node-exporter
-#  src: cloudalchemy.node-exporter
+- name: cloudalchemy.node-exporter
+  src: git+https://github.com/cloudalchemy/ansible-node-exporter.git
 
 - name: netdata
   src: https://github.com/hackwish/ansible-netdata.git
