update install options. Add tv option. Update installer

--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -3,12 +3,10 @@
 
   roles:
     - bihealth.python3
-    - common-desktop
+    - common
     - ohmyzsh
     - cloudalchemy.node-exporter
     # - netdata
-    - plank
-    - droidcam
   become: yes
 
   tasks:
