--- a/ansible/playbooks/devops.yml
+++ b/ansible/playbooks/devops.yml
@@ -13,6 +13,9 @@
     # terraform_ver: "0.12.20"
 
   roles:
+    - common-desktop
+    - plank
+    - droidcam
     - andrewrothstein.vagrant
     - azure-data-studio
     - cloud-sql-proxy
