--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -10,6 +10,22 @@
   become: yes
 
   tasks:
+    - name: Ensure python Ansible Requirements modules.
+      pip:
+        name:
+          - PyYAML
+          - ansible-lint
+          - cryptography
+          - gevent
+          - grpcio
+          - grpcio-tools
+          - lxml
+          - passlib
+          - python-apt
+          - requests
+        executable: pip3
+        state: present
+
     - name: Create a 4096-bit SSH key for user root
       user:
           name: root
