--- a/ansible/playbooks/devops.yml
+++ b/ansible/playbooks/devops.yml
@@ -17,6 +17,7 @@
     - common-devops-desktop
     - plank
     - droidcam
+    - anydesk
     - andrewrothstein.vagrant
     - azure-data-studio
     - cloud-sql-proxy
