--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -21,8 +21,8 @@
 - name: netdata
   src: https://github.com/hackwish/ansible-netdata.git
 
-- name: bihealth.python3
-  src: bihealth.python3
+#- name: bihealth.python3
+#  src: bihealth.python3
 
 - name: andrewrothstein.vagrant
   src: andrewrothstein.vagrant
