--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,11 +1,13 @@
 plugins:
-- "@semantic-release/commit-analyzer"
-- "@semantic-release/release-notes-generator"
-- - "@semantic-release/changelog"
-  - changelogFile: CHANGELOG.md
-- "@semantic-release/github"
+  - "@semantic-release/commit-analyzer"
+  - "@semantic-release/release-notes-generator"
+  - "@semantic-release/exec"
+  - - "@semantic-release/changelog"
+    - changelogFile: CHANGELOG.md
+  - "@semantic-release/git"
+  - "@semantic-release/github"
 branches:
-- "master"
+  - "master"
 # - "+([0-9])?(.{+([0-9]),x}).x"
 # - name: "alpha"
   # prerelease: "alpha"
