--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -105,6 +105,9 @@
 - name: velero-io
   src: https://github.com/hackwish/ansible-velero-io.git
 
+- name: anbox
+  src: https://github.com/hackwish/ansible-anbox.git
+
 - name: fesaille.gh
   src: fesaille.gh
 
