--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -105,8 +105,8 @@
 - name: velero-io
   src: https://github.com/hackwish/ansible-velero-io.git
 
-- name: anbox
-  src: https://github.com/hackwish/ansible-anbox.git
+# - name: anbox
+#   src: https://github.com/hackwish/ansible-anbox.git
 
 - name: fesaille.gh
   src: fesaille.gh
