--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -25,6 +25,7 @@
           - requests
         executable: pip3
         state: present
+      when: ansible_architecture == "x86_64"     
 
     - name: Create a 4096-bit SSH key for user root
       user:
@@ -41,11 +42,11 @@
       with_items:
         - swap
         - none
-      when: ansible_memory_mb['real']['total'] | int >= 16384
+      when: ansible_memory_mb['real']['total'] | int >= 16384 or ansible_architecture == "aarch64"
 
     - name: Disable swap
       command: swapoff -a
-      when: ansible_swaptotal_mb > 0 and ansible_memory_mb['real']['total'] | int >= 16384
+      when: ansible_swaptotal_mb > 0 and ansible_memory_mb['real']['total'] | int >= 16384  or ansible_architecture == "aarch64"
 
     - name : list users to apply oh-my-zsh
       shell: "getent passwd | awk -F: '$3 > 999 {print $1}'"
